# insured-agent-labs

./: .env.example  .gitignore  FrontEnd.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  pages.yml  release.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/src/: db.rs  docs.rs  error.rs  lib.rs  main.rs  seed.rs  state.rs
backend/src/admin/: mod.rs
backend/src/auth/: mod.rs  routes.rs
backend/src/catalog/: mod.rs
backend/src/eapps/: dto.rs  mod.rs  routes.rs  validation.rs
backend/src/leads/: dto.rs  routes.rs  validation.rs
backend/src/payments/: dto.rs  mod.rs  routes.rs
backend/src/quotations/: calc.rs  dto.rs  mod.rs  routes.rs
backend/src/transactions/: mod.rs
deploy/k8s/: backend.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  web.yaml
docs/: DEPLOYMENT.md  FINDINGS.md  ROADMAP.md  TEST-USERS.md  TESTIDS.md
docs/requirements/: 01-auth.md  02-catalog.md  03-leads.md  04-quotations.md  05-eapps-policy.md  06-payments.md  07-dashboard-transactions.md  08-admin-qa-tooling.md  09-i18n-localization.md  10-scenarios-test-data.md  README.md
e2e/: .env.example  .gitignore  CONTRIBUTING.md  README.md  global-setup.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
e2e/api/: admin.api.spec.ts  (+9 more)
scripts/: build-slides-index.mjs
slides/: Playwright Automation Excellence - Session 1 - Deck.html  index.html
web/: .dockerignore  .env.example  .prettierignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
(+136 files in other folders)
